--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "graphql-ws": "^5.8.2",
     "jwt-decode": "^3.1.2",
     "luxon": "^2.4.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.2",
